testsuites/LLT/compiler/Diagnose/lex_test/lex_expected_identifier/case6.expect.out
error: multi-line string must start with newline character
  ==> case6.cj:16:17:
   | 
16 |     cangjie1 ${r'''}
   |                 ~~~^ expected to start with newline character
   |                 |
   |                 because it is in multi-line string
   | 

1 error generated, 1 error printed.
